SAK-17628
git-svn-id: https://source.sakaiproject.org/svn/assignment/trunk@70863 66ffb92e-73f9-0310-93c1-f5514f145a0a